# google_ads_agent

./: .env.template  .flake8  .gitignore  .pylintrc  ACTION_PLAN.md  API_FIXES.md  AUTONOMOUS_PPC_AGENT_PLAN.md  CHANGELOG.md  FINAL_REPORT.md  README.md  SUMMARY.md  __init__.py  ads_agent.py  ads_api.py  app.py  autonomous_agent.py  autonomous_ppc_agent.py  autonomous_ppc_manager.py  chat_interface.py  check_loaded_modules.py  clean_bytecode.py  config.py  gap_analysis.md  gap_analysis_matrix.md  list_models.py  logger.py  main.py  mypy.ini  optimizer.py  pyproject.toml  quick_test.py  requirements.txt  run.bat  run_agent.py  run_ltv_tests.py  run_tests.bat  scheduled_tasks.json  scheduler.py  setup.cfg  simple_ltv_test.py  (+14 more)
.cursor/: config.json
.cursorci/: CODEOWNERS  CONTRIBUTING.md  README.md  ci.yml
config/: creative_config.py
cursor-auto-accept/: index.js  package.json
data/: scheduled_tasks.json
services/: __init__.py  base_service.py  creative_service.py
tests/: another_test.py  test_bandit_service.py  test_bid_service.py  test_causal_inference_service.py  test_contextual_signal_service.py  test_creative_service.py  test_data_visualization_service.py  test_experimentation_service.py  test_expert_feedback_service.py  test_forecasting_service.py  test_generative_content_service.py  test_graph_optimization_service.py  test_landing_page_optimization_service.py  test_ltv_bidding_service.py  test_meta_learning_service.py  test_personalization_service.py  test_portfolio_optimization_service.py  test_reinforcement_learning_service.py  test_reporting_service.py  (+7 more)
(+82 files in other folders)
